fix: canvas text align issue of tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
